--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
-# Compiled class file
-*.class
+/bin/
+/build/
+/libs/
+/config/
+/dist/
+/log/
+/target/
 
-# Log file
-*.log
+#Useless
+data/scripts/quests/
+data/customlogs/
+data/lang/
+data/universe/
+data/faenor/
+data/crests/
+data/logs/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+data/crests/
+data/logs/
+
+.settings
+.classpath
+.project
