--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="data/scripts"/>
-	<classpathentry excluding="luna/museum/|net/sf/l2j/gameserver/model/actor/instance/L2MuseumStatueInstance.java" including="**/*.java" kind="src" output="target/classes" path="java">
+	<classpathentry excluding="luna/museum/|net/sf/l2j/gameserver/model/actor/instance/L2MuseumStatueInstance.java" including="**/*.java" kind="src" output="L2TrinityGit/bin" path="java">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/java-engine-1.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/c3p0-0.9.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/c3p0-0.9.5-pre6.jar"/>
@@ -29,7 +30,7 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="lib" path="lib/bsh-2.0b5.jar"/>
 	<classpathentry kind="lib" path="lib/bsh-engine.jar"/>
-	<classpathentry kind="lib" path="lib/java-engine-1.8.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_271"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
