--- a/config/Luna.properties
+++ b/config/Luna.properties
@@ -283,12 +283,12 @@ enable_captcha = True
 #		Email					 #
 #================================#
 
-EnableEmail = true
+EnableEmail = false
 MailUsername = lineage2trinityserver@gmail.com
 MailPassowrd = WyKuQWhuDFgCipK
 
-DonateMailUsername = l2trinitydonation@gmail.com
-DonateMailPassowrd = !!@@##VaggelisM1996!!@@##
+DonateMailUsername = lineage2trinityserver@gmail.com
+DonateMailPassowrd = WyKuQWha2DFgCipK
 
 
 #================================#
